force-app/main/default/objects/TLG_Kanban_Board_Config__c/fields/TLG_Card_Gradient_Dark_Bottom__c.field-meta.xml
<CustomField>
    <fullName>TLG_Card_Gradient_Dark_Bottom__c</fullName>
    <description>Bottom color for card gradient in dark theme (hex code)</description>
    <inlineHelpText>Enter a hex color code for the bottom of the card gradient in dark theme (e.g., #3e2723 for dark brown)</inlineHelpText>
    <label>Card Gradient Dark Bottom</label>
    <length>7</length>
    <type>Text</type>
</CustomField>