force-app/main/default/objects/TLG_Kanban_Board_Config__c/fields/TLG_Card_Gradient_Dark_Top__c.field-meta.xml
<CustomField>
    <fullName>TLG_Card_Gradient_Dark_Top__c</fullName>
    <description>Top color for card gradient in dark theme (hex code)</description>
    <inlineHelpText>Enter a hex color code for the top of the card gradient in dark theme (e.g., #f5f5dc for beige)</inlineHelpText>
    <label>Card Gradient Dark Top</label>
    <length>7</length>
    <type>Text</type>
</CustomField>