force-app/main/default/objects/TLG_Kanban_Board_Config__c/fields/TLG_Card_Gradient_Light_Bottom__c.field-meta.xml
<CustomField>
    <fullName>TLG_Card_Gradient_Light_Bottom__c</fullName>
    <description>Bottom color for card gradient in light theme (hex code)</description>
    <inlineHelpText>Enter a hex color code for the bottom of the card gradient in light theme (e.g., #a0826d for light brown)</inlineHelpText>
    <label>Card Gradient Light Bottom</label>
    <length>7</length>
    <type>Text</type>
</CustomField>