force-app/main/default/objects/TLG_Kanban_Board_Config__c/fields/TLG_Card_Gradient_Light_Top__c.field-meta.xml
<CustomField>
    <fullName>TLG_Card_Gradient_Light_Top__c</fullName>
    <description>Top color for card gradient in light theme (hex code)</description>
    <inlineHelpText>Enter a hex color code for the top of the card gradient in light theme (e.g., #ffffff for white)</inlineHelpText>
    <label>Card Gradient Light Top</label>
    <length>7</length>
    <type>Text</type>
</CustomField>