force-app/main/default/objects/TLG_Kanban_Board_Config__c/fields/TLG_Collapsed_Color_Start__c.field-meta.xml
<CustomField>
    <fullName>TLG_Collapsed_Color_Start__c</fullName>
    <description>Start color for collapsed column gradient (e.g., #10b981)</description>
    <label>Collapsed Color Start</label>
    <length>7</length>
    <type>Text</type>
</CustomField>