force-app/main/default/objects/TLG_Kanban_Board_Config__c/fields/TLG_Color_Code__c.field-meta.xml
<CustomField>
    <fullName>TLG_Color_Code__c</fullName>
    <description>Hex color code for the status (e.g., #10b981)</description>
    <label>Color Code</label>
    <length>7</length>
    <required>true</required>
    <type>Text</type>
</CustomField>