force-app/main/default/objects/TLG_Kanban_Board_Config__c/fields/TLG_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>TLG_Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if this status configuration is active</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>