force-app/main/default/objects/TLG_Kanban_Board_Config__c/fields/TLG_Status_Name__c.field-meta.xml
<CustomField>
    <fullName>TLG_Status_Name__c</fullName>
    <description>The name of the status (e.g., Not Started, In Progress, Completed)</description>
    <label>Status Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>